--- a/package.json
+++ b/package.json
@@ -1,47 +1,18 @@
 {
   "name": "agylcode",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.7.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource-variable/public-sans": "^5.0.4",
-    "@fontsource-variable/raleway": "^5.0.4",
-    "@fontsource-variable/rubik": "^5.0.4",
-    "@fontsource/fira-sans": "^5.0.3",
-    "@fontsource/space-grotesk": "^5.0.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
-    "framer-motion": "^6.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^3.11.0",
-    "react-router-dom": "^6.12.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "@lucide/astro": "^0.515.0",
+    "@tailwindcss/vite": "^4.1.10",
+    "astro": "^5.9.3",
+    "daisyui": "^5.0.43",
+    "tailwindcss": "^4.1.10"
   }
 }
